
@startuml
skinparam classAttributeIconSize 0
skinparam style strictuml

class Socio {
  +id: int
  +dniNie: string
  +nombre: string
  +apellido1: string
  +apellido2: string
  +direccion: string
  +telefonoFijo: string
  +telefonoMovil: string
  +email: string
  +grupoDifusion: string
  +fechaAlta: date
  +fechaBaja: date
  +observaciones: text
  +foto: blob
}

class Voluntario {
  +id: int
  +dniNie: string
  +nombre: string
  +apellido1: string
  +apellido2: string
}

class Curso {
  +id: int
  +tematica: string
  +fechaHora: datetime
}

class Inscripcion {
  +id: int
  +fechaInscripcion: date
}

class Asistencia {
  +id: int
  +fecha: date
  +presente: boolean
}

class Pago {
  +id: int
  +fecha: date
  +importe: decimal
}

Socio "1" -- "0..*" Inscripcion
Curso "1" -- "0..*" Inscripcion
Inscripcion "1" -- "0..*" Asistencia
Inscripcion "1" -- "0..*" Pago
Curso "1" -- "1" Voluntario

@enduml
